--- a/sass/components/_language-pop-up.scss
+++ b/sass/components/_language-pop-up.scss
@@ -78,10 +78,8 @@
         &__flag {
             overflow: hidden;
             position: relative;
-            display: flex;
-            justify-content: center;
-            align-items: flex-start;
-            height: 100% !important;
+            display: block;
+            height: 100%;
             width: 100%;
         }
 
